// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jwt service initializer should fail with a bad tolerance 1`] = `
Object {
  "errorCode": "E_BAD_JWT_TOLERANCE",
  "errorParams": Array [
    "",
    "val is not a non-empty string or a valid number. val=\\"\\"",
  ],
  "logs": Array [],
  "times": Array [],
}
`;

exports[`jwt service initializer should fail with a uninterpreted duration 1`] = `
Object {
  "errorCode": "E_BAD_JWT_DURATION",
  "errorParams": Array [
    "q",
  ],
  "logs": Array [],
  "times": Array [],
}
`;

exports[`jwt service initializer should fail without algorithms 1`] = `
Object {
  "errorCode": "E_NO_JWT_ALGORITHMS",
  "errorParams": Array [],
  "logs": Array [],
  "times": Array [],
}
`;

exports[`jwt service initializer should fail without duration 1`] = `
Object {
  "errorCode": "E_BAD_JWT_DURATION",
  "errorParams": Array [],
  "logs": Array [],
  "times": Array [],
}
`;

exports[`jwt service initializer should fail without secret 1`] = `
Object {
  "errorCode": "E_NO_JWT_SECRET",
  "errorParams": Array [],
  "logs": Array [],
  "times": Array [],
}
`;

exports[`jwt service sign should fail with a bad algorithm 1`] = `
Object {
  "errorCode": "E_UNKNOWN_ALGORYTHM",
  "errorParams": Array [
    "LOLALG",
    Array [
      "HS256",
    ],
  ],
  "logs": Array [
    Array [
      "info",
      "JWT service initialized!",
    ],
  ],
  "times": Array [
    Array [],
  ],
}
`;

exports[`jwt service sign should work 1`] = `
Object {
  "logs": Array [
    Array [
      "info",
      "JWT service initialized!",
    ],
  ],
  "times": Array [
    Array [],
  ],
  "token": Object {
    "expiresAt": 1390867200000,
    "issuedAt": 1390694400000,
    "token": "eyJhbGciOiJIUzI1NiJ9.eyJ1c2VySWQiOjIsIm9yZ2FuaXNhdGlvbklkIjozLCJpYXQiOjEzOTA2OTQ0MDAsImV4cCI6MTM5MDg2NzIwMCwibmJmIjoxMzkwNjk0NDAwfQ.DdWhIErffR-N-bTSsjr2tDOyinbMtYkL24IZxOVaB_0",
    "validAt": 1390694400000,
  },
}
`;

exports[`jwt service verify should fail after the validity duration 1`] = `
Object {
  "errorCode": "E_JWT_EXPIRED",
  "errorParams": Array [
    "eyJhbGciOiJIUzI1NiJ9.eyJ1c2VySWQiOjIsIm9yZ2FuaXNhdGlvbklkIjozLCJpYXQiOjEzOTA2OTQ0MDAsImV4cCI6MTM5MDg2NzIwMCwibmJmIjoxMzkwNjk0NDAwfQ.DdWhIErffR-N-bTSsjr2tDOyinbMtYkL24IZxOVaB_0",
    "jwt expired",
  ],
  "logs": Array [
    Array [
      "info",
      "JWT service initialized!",
    ],
  ],
  "times": Array [
    Array [],
  ],
}
`;

exports[`jwt service verify should fail with a malformed token 1`] = `
Object {
  "errorCode": "E_JWT_MALFORMED",
  "errorParams": Array [
    "kikooolol",
    "jwt malformed",
  ],
  "logs": Array [
    Array [
      "info",
      "JWT service initialized!",
    ],
  ],
  "times": Array [
    Array [],
  ],
}
`;

exports[`jwt service verify should work 1`] = `
Object {
  "decoded": Object {
    "exp": 1390867200,
    "iat": 1390694400,
    "nbf": 1390694400,
    "organisationId": 3,
    "userId": 2,
  },
  "logs": Array [
    Array [
      "info",
      "JWT service initialized!",
    ],
  ],
  "times": Array [
    Array [],
  ],
}
`;
